# cadence-fitness

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/data/: exercises.py
backend/app/routers/: adherence.py  exercises.py  goals.py  health.py  routines.py  sessions.py  state.py
backend/app/services/: derive.py  jester.py  outbox.py  seed.py  streaks.py
backend/tests/: conftest.py  test_auth.py  test_day_nav.py  test_derive.py  test_eva.py  test_exercises.py  test_logging.py  test_outbox.py  test_streaks.py
deploy/: .env.example  cadence.service  deploy.sh
docs/: cadence-event-contract.md  eva-hermes-prompt.md
docs/superpowers/specs/: 2026-06-28-cadence-phase1-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CalendarHeatmap.tsx  DayNav.tsx  EvaUpdateBanner.tsx  ExerciseDetail.tsx  ExerciseList.tsx  OfflineIndicator.tsx  ReadinessCheck.tsx  RestCard.tsx  SessionCard.tsx  SignIn.tsx  Skeleton.tsx  StarRating.tsx  Stepper.tsx  StreakMeter.tsx  TypeBadge.tsx
frontend/src/lib/: api.ts  format.ts  offlineQueue.ts  queries.ts  types.ts  useOfflineSync.ts
frontend/src/pages/: ExercisesPage.tsx  GoalsPage.tsx  HistoryPage.tsx  LogPage.tsx  SettingsPage.tsx  TodayPage.tsx
frontend/tests/: components.test.tsx  exercises.test.tsx  offlineQueue.test.ts
scripts/: gen_exercise_svgs.py
